--- a/responsive.css
+++ b/responsive.css
@@ -43,6 +43,11 @@
 
 
 @media only screen and (max-width:767px) {
+    #home img {
+    width: 225px;
+    height: 225px;
+    display: contents;
+    }
     .img-lateral {
         width: 100px;
     }
