--- a/responsive.css
+++ b/responsive.css
@@ -114,7 +114,7 @@
 }
     
     
-    @media only screen and (max-padding:907px)
+    @media only screen and (max-width:707px)
     
     #home img {
     display: flex;
