--- a/responsive.css
+++ b/responsive.css
@@ -113,4 +113,11 @@
     padding-right: 27px;
 }
 
-    @media only screen and (max-width: 500px)
+    @media only screen and (max-width: 500px) {
+    #home img {
+    width: 150px;
+    height: 150px;
+}
+    }
+    
+        
