--- a/responsive.css
+++ b/responsive.css
@@ -42,7 +42,7 @@
 }
 
 
-@media only screen and (max-width:767px) {
+@media only screen and (min-width:501px) and (max-width:767px) {
     #home img {
     display: flex;
     width: 225px;
