--- a/responsive.css
+++ b/responsive.css
@@ -41,7 +41,7 @@
 }
 }
 
-@media only screen and (max-width:767px) {
+@media only-screen and (max-width:767px) {
     .img-lateral {
         width: 100px;
     }
