--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,6 @@
 
 
-@media only-screen and (min-width:992px) and (max-width:1200px) {
+@media only screen and (min-width:992px) and (max-width:1200px) {
     #home img {
         width: 210px;
         height: 210px;
@@ -11,7 +11,7 @@
 }
 }
 
-@media only-screen and (min-width:768px) and (max-width:991px) {
+@media only screen and (min-width:768px) and (max-width:991px) {
     #home img {
         width: 210px;
         height: 210px;
@@ -41,7 +41,7 @@
 }
 }
 
-@media only-screen and (max-width:767px) {
+@media only screen and (max-width:767px) {
     #home img {
         width: 155px;
         heigth: 155px;
