--- a/responsive.css
+++ b/responsive.css
@@ -44,7 +44,7 @@
 @media only screen and (max-width:767px) {
     #home img {
         width: 155px;
-        heigth: 155px;
+        height: 155px;
         display: flex;
     }
     .img-lateral {
