--- a/responsive.css
+++ b/responsive.css
@@ -13,10 +13,8 @@
 
 @media only screen and (min-width:768px) and (max-width:991px) {
     #home img {
-        width: 210px;
-        height: 210px;
-        display: flex;
-        margin-bottom: 15px;
+        width: 200px;
+        height: 200px;
 }
 .encontre-one-unidade1, .encontre-one-unidade2 {
     width: 225px;
@@ -63,13 +61,13 @@
         margin-right: 7px;
 }
 #icons {
-    top: 111%;
+    top: 192%;
 }
 #icons-two {
-    top: 216%;
+    top: 299%;
 }
 #icons-three {
-    top: 323%;
+    top: 406%;
 }
 #encontre-one, #encontre-two, #encontre-three {
     display: flex;
@@ -94,11 +92,14 @@
     margin-top: 130px;
 }
 .conteudo-sobre-paragrafo-one {
-    font-size: small;
+    font-size: x-small;
 }
 .espelho-one {
-    margin-top: 110px;
+    margin-bottom: 55px;
+    margin-right: 28px;
+    margin-left: 28px;
     padding-top: 5px;
+    padding-bottom: 10px;
 }
 .slider-three-rest img {
     height: 200px;
