--- a/responsive.css
+++ b/responsive.css
@@ -39,7 +39,7 @@
 }
 }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
     #home img {
         width: 155px;
         height: 155px;
