--- a/responsive.css
+++ b/responsive.css
@@ -39,7 +39,7 @@
 }
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
     #home img {
         width: 155px;
         height: 155px;
@@ -102,16 +102,6 @@
     padding-left: 7px;
     padding-right: 27px;
 }
-        #icons {
-    top: 192%;
-    z-index: 1;
-}
-#icons-two {
-    top: 299%;
-    z-index:1;
-}
-#icons-three {
-    top: 406%;
-}
+ 
 }
         
