--- a/responsive.css
+++ b/responsive.css
@@ -94,7 +94,7 @@
     padding-right: 27px;
 }
         #icons {
-    top: 210%;
+    top: 208%;
     z-index:1;
 }
 #icons-two {
@@ -103,6 +103,7 @@
 }
 #icons-three {
     top: 430%;
+    z-index:1;
 }
  
 }
